[metadata]
name = kabbes_pygame_pack
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = helpful PyGame functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes-pygame-pack/
project_urls =
    GitHub = https://github.com/jameskabbes/pygame_pack
    Documentation = https://jameskabbes.github.io/pygame_pack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src